# RAG-Basic-to-Advanced

./: .env  .env.example  .gitignore  README.md  agent.md  check_sources.py  debug_page6.py  docker-compose.prod.yml  main.py  pyproject.toml  rag_mvp.md  read_pdf_sample.py  requirements.txt  search_chroma.py  search_pdf.py  test_aws_bedrock.py  test_get_llm.py  test_ingest.py  test_rank.py  test_retrieval.py  test_retrieval_output.txt  test_structured.py  verify_text.py
.qwen/: settings.json
agent_skills/: README.md
agent_skills/langchain-rag-legal/: SKILL.md
agent_skills/langgraph-fundamentals-legal/: SKILL.md
agent_skills/langgraph-human-in-the-loop-legal/: SKILL.md
chroma_db/: chroma.sqlite3
docker/: Dockerfile  docker-compose.yml
docs/curso/: ANALISIS_RAG_TECHNIQUES.md  PROGRESO.md  README.md  REFUERZO_COMPLETADO.md  RESUMEN_DEL_CURSO.md
docs/curso/00-configuracion/: README.md
docs/curso/01-fundamentos-langchain/: 01-conexion-llm.md  02-prompts.md  03-mensajes.md  04-estructura-salida.md
docs/curso/02-memoria/: 01-corto-plazo.md  02-largo-plazo.md
docs/curso/03-streaming/: 01-streaming-tokens.md
docs/curso/04-langgraph-basico/: 01-primer-grafo.md
docs/curso/05-herramientas/: 01-tools-comparativa.md  INFORME_IMPLEMENTACION.md  README.md  RESUMEN.md
docs/curso/06-human-in-the-loop/: README.md
docs/curso/07-ejercicios-resueltos/: README.md
docs/curso/08-mejores-practicas/: README.md
proyectos/: models.json
proyectos/01-chatbot-legal-basico/: README.md  main.py  requirements.txt  test_completo.py  test_quick.py
proyectos/06-auditor-legal-crag-selfrag/: .env.example  README.md  cli.py  ingest_data.py  main.py  test_auditor.py
proyectos/Rag_Legal/: __init__.py  app.py  config.py  graph.py  ingestor.py  nodes.py  retriever.py  state.py
scripts/: fix_graph_end_error.py  migrate_gemini_models.py
src/ingestion/: ingestion.py  loader.py
src/utils/: loggers.py
(+42 files in other folders)
